--- a/UserApp/Views/Pages/Book/StartBookPage.xaml
+++ b/UserApp/Views/Pages/Book/StartBookPage.xaml
@@ -7,11 +7,6 @@
       mc:Ignorable="d" 
       d:DesignHeight="1080" d:DesignWidth="1920"
       Title="StartBookPage">
-    <Page.Resources>
-        <Style TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="Montserrat Alternates"/>
-        </Style>
-    </Page.Resources>
     <Grid>
         <Image Source="/Resources/Book/background.png" Width="1920" Height="1080"/>
         <Canvas>
@@ -21,16 +16,17 @@
             <Image Source="/Resources/Book/book5.png" Width="464" Height="704" Canvas.Left="745" Canvas.Top="558"/>
             <Image Source="/Resources/Book/book4.png" Width="464" Height="704" Canvas.Left="276" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
-            <TextBlock FontSize="80" FontWeight="Black" Canvas.Left="1205" Canvas.Top="239" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <TextBlock Style="{StaticResource h1}"
+                       Canvas.Left="1205" Canvas.Top="239">
     <Run Text="ПАМЯТЬ"/>
     <LineBreak/>
     <Run Text="ПОКОЛЕНИЙ"/>
             </TextBlock>
 
-            <TextBlock Text="Каждая книга — это дверь в
-                       прошлое, раскрывающая наследие поколений. Каждая история — ключ к пониманию и сохранению исторической памяти. "
-                       FontSize="36" Width="715"
-                       TextWrapping="Wrap" Canvas.Left="1205" Canvas.Top="447" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <TextBlock Text="Каждая книга — это дверь в прошлое, раскрывающая наследие поколений.
+Каждая история — ключ к пониманию и сохранению исторической памяти. "
+                       Style="{StaticResource h2}"
+                       Width="715" Canvas.Left="1205" Canvas.Top="447"/>
 
             <Button Style="{StaticResource RoundedButtonStyle}" Content="Читать" Width="372" Height="89" FontSize="36" FontWeight="Bold"
                     Background="Black" Canvas.Left="1318" Canvas.Top="763">
