--- a/UserApp/Views/Pages/Book/BookPage.xaml
+++ b/UserApp/Views/Pages/Book/BookPage.xaml
@@ -4,11 +4,28 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:UserApp.Views.Pages.Book"
+      xmlns:vm="clr-namespace:UserApp.ViewModels.BookVM"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="1080" d:DesignWidth="1920"
       Title="BookPage">
 
-    <Grid>
-        
-    </Grid>
+    <d:Page.DataContext>
+        <vm:BookViewModel/>
+    </d:Page.DataContext>
+
+    <ScrollViewer>
+        <Grid>
+            <Image Source="/Resources/Book/background.png" Stretch="Fill"/>
+            <Image Source="{Binding SelectedBook.CoverImagePath}" VerticalAlignment="Top" HorizontalAlignment="Left"
+                   Width="426" Height="667" Margin="50,80,0,0"/>
+            <StackPanel Margin="534,80,0,0">
+                <TextBlock Text="{Binding SelectedBook.Title}" Style="{StaticResource h1}"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Автор: " Style="{StaticResource title}"/>
+                    <TextBlock Text="{Binding SelectedBook.Author.Name}" Style="{StaticResource h1}"/>
+                </StackPanel>
+                <TextBlock Text="{Binding SelectedBook.Title}" Style="{StaticResource h1}"/>
+            </StackPanel>
+        </Grid>
+    </ScrollViewer>
 </Page>
